split in plural files

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <canvas id="mainCanvas" width="320" height="240" style="">:-/</canvas>
     <script type="text/javascript" src="game.js"></script>
     <script type="text/javascript" src="blocks.js"></script>
+    <script type="text/javascript" src="blocksUpdate.js"></script>
+    <script type="text/javascript" src="blocksDraw.js"></script>
+    <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
